# info

./: .env.prod  .envrc  .gitattributes  .gitignore  200.html  404.html  CNAME  Cargo.toml  Cargo.tomlw  README.md  _payload.json  app.vue  cf-build.sh  dist  flake.nix  index.html  nuxt.config.ts  package-lock.json  package.json  result-1  result-2  tailwind.config.ts  workspace.json
_nuxt/: 2d-inverse-kinematics.7a3ba354.js  2d-inverse-kinematics.8624a222.css  2d-inverse-kinematics.862e917b.css  2d-inverse-kinematics.980e5d0d.js  2d-inverse-kinematics.ae8aa839.js  BackgroundWrapper.3f69dcd1.js  BackgroundWrapper.4868d831.js  BackgroundWrapper.88dedfd6.js  BackgroundWrapper.9717ab29.js  BackgroundWrapper.a4142d5f.js  BackgroundWrapper.ae3d8fee.js  BackgroundWrapper.c9c2a33e.js  BackgroundWrapper.dfd8452a.js  BackgroundWrapper.f899c3b3.js  BackgroundWrapper.f8ad4b42.js  BackgroundWrapper.fd8a222a.js  JupyterLiteWrapper.4fb09067.js  JupyterLiteWrapper.598233fa.js  JupyterLiteWrapper.662d0f8a.js  JupyterLiteWrapper.82dffd1a.js  JupyterLiteWrapper.890732a1.js  NavBar.09e71ea1.js  (+217 more)
app/ui/: Cargo.toml  Trunk.toml  index.html
app/ui/public/: notebook-theme.css
app/ui/public/functions/: _middleware.js
app/ui/public/notebooks/: inverse-kinematic-approximations.html  kinematics.html  wigglystuff.html
app/ui/public/notebooks/assets/: index-DH00kbhV.css
app/ui/public/notebooks/wigglystuff-export/: index.html
app/ui/public/notebooks/wigglystuff-export/assets-fixed/: state-BWM3qRkR.js
app/ui/public/projects-media/: cascade-demo.cast  hephaestus-demo.cast
app/ui/public/shell/: spot-shell.js  spot-shell_bg.wasm
app/ui/public/spot-assets/: LEFT_FOOT.stl  RIGHT_HIP.stl  obs_mean.npy  obs_std.npy  policy.onnx  spot.urdf
app/ui/public/spot-assets/glb/: Battery.glb  LEFT_LOWER_LEG.glb  Shoulder_Right.glb  Tibia_Left.glb
app/ui/public/spot-assets/shaders/: hand_drawn.wgsl
app/ui/public/spot-gym/: index.html
app/ui/public/wasm/flock/: flock.d.ts  flock.js  flock_bg.wasm.d.ts  package.json
app/ui/public/wasm/panel-kit-tui/: browser_tui.html  panel-kit-tui-631e0bc23f37def5.js  panel-kit-tui-631e0bc23f37def5_bg.wasm
app/ui/public/wasm/pipedream/: package.json  pipedream.d.ts  pipedream.js  pipedream_bg.wasm.d.ts
app/ui/src/: main.rs
crates/info-core/: Cargo.toml
crates/info-core/src/: lib.rs
crates/info-tui/: Cargo.toml  browser_tui.html
crates/info-tui/examples/: browser_tui.rs
crates/info-tui/src/: lib.rs  main.rs
libs/renderer/: Cargo.toml  project.json
wasm/: Cargo.toml
wasm/bevy-core/: Cargo.toml
wasm/bevy-core/src/: debug.rs  lib.rs  pixel_canvas.rs  theme.rs
wasm/ethernet-3dpipes/: Cargo.toml  build.rs
wasm/ethernet-3dpipes/src/: app.rs  lib.rs  web.rs
wasm/flock/: Cargo.toml  build.rs  themeColors.json
wasm/flock/.cargo/: config.toml
wasm/flock/src/: lib.rs  utils.rs  web.rs  web_bevy.rs
wasm/flock/src/app/: animation.rs  eframe_app.rs  math.rs  state.rs  theme.rs  theme_gen.rs  ui.rs
wasm/flock/src/flock/: bird.rs  bird_config.rs  flock.rs  mod.rs
wasm/pipedream/: Cargo.toml
wasm/pipedream/src/: app.rs  web.rs  web_bevy.rs
wasm/spot/: Cargo.toml  convert_assets.py  convert_shell.nix
wasm/spot/assets/: BACK.stl  BatteryRenamed.stl  Chassis_Right_Side.stl  FRONT.stl  Front.stl  RIGHT_LOWER_LEG.stl  policy.onnx  terrain.glb  terrain.json
wasm/spot/assets/glb/: BACK.glb  BATTERY.glb  Back.glb  Back_Bracket.glb  Battery.glb  Body.glb  Chassis_Left_Side.glb  Chassis_Right_Side.glb  FRONT.glb  Femur.glb  Foot.glb  Front.glb  Front_Bracket.glb  LEFT_FOOT.glb  LEFT_HIP.glb  LEFT_UPPER_LEG.glb  MAINBODY.glb  RIGHT_FOOT.glb  RIGHT_HIP.glb  RIGHT_LOWER_LEG.glb  RIGHT_UPPER_LEG.glb  SERVO_WITH_COVER.glb  Shoulder_Left.glb  Tibia_Right.glb
wasm/spot/rapier-gym/: .gitignore  Cargo.toml  deploy.sh  export_pipeline.py  pyproject.toml  train_rapier.py
wasm/spot/rapier-gym/python/spot_rapier/: __init__.py  env.py
wasm/spot/rapier-gym/src/: lib.rs  sim.rs  terrain.rs  urdf.rs
wasm/spot/rapier-gym/viz/: __init__.py  dashboard.html  dashboard.py  envoy.yaml  live_dashboard.py  live_replay.py  python_replay.py  rerun_logger.py  sanity_check.py  serve.py
wasm/spot/scripts/: colorize-glb.mjs  generate-grid-texture.mjs  generate-terrain.mjs
wasm/spot/spot-physics/: Cargo.toml
wasm/spot/spot-physics/src/: config.rs  lib.rs  observation.rs  physics.rs  renderer.rs  rerun_renderer.rs  terrain.rs  types.rs  urdf.rs
wasm/spot/src/: app.rs  camera.rs  config.rs  god_hand.rs  hand_drawn.rs  input.rs  lib.rs  physics.rs  render.rs  scene.rs  simulation.rs  terrain.rs  ui.rs  urdf.rs  web_bevy.rs
wasm/spot/src/controller/: mod.rs
wasm/spot/src/ml/: evolution.rs  mod.rs  network.rs  policy.rs  types.rs
wasm/spot/src/physics/: mod.rs
wasm/spot/src/renderer/: mod.rs
wasm/spot/tools/asset-gen/: Cargo.toml
wasm/spot/tools/asset-gen/src/: main.rs
wasm/spot/training/: TRAINING_WITH_RAY.md  export_policy_to_onnx.py  launch_distributed.sh  monitor_training.py  rewards.py  shell.nix  submit_ray_job.py
wasm/spot/training/assets/: Back.stl  Back_Bracket.stl  Front_Bracket.stl  LEFT_HIP.stl  LEFT_LOWER_LEG.stl  LEFT_UPPER_LEG.stl  MAINBODY.stl  RIGHT_FOOT.stl  RIGHT_UPPER_LEG.stl  SERVO_WITH_COVER.stl  spot.urdf
wasm/spot/training/assets/glb/: Back.glb  Back_Bracket.glb  Battery.glb  Body.glb  Chassis_Left_Side.glb  Chassis_Right_Side.glb  Femur.glb  Foot.glb  Front.glb  Front_Bracket.glb  LEFT_FOOT.glb  LEFT_HIP.glb  LEFT_LOWER_LEG.glb  LEFT_UPPER_LEG.glb  RIGHT_FOOT.glb  RIGHT_HIP.glb  RIGHT_LOWER_LEG.glb  RIGHT_UPPER_LEG.glb  SERVO_WITH_COVER.glb  Shoulder_Left.glb  Shoulder_Right.glb  Tibia_Left.glb  Tibia_Right.glb
wasm/spot/training/assets/stl_raw/: Body.stl  Femur.stl  Foot.stl  Shoulder_Left.stl  Shoulder_Right.stl  Tibia_Left.stl  Tibia_Right.stl
wasm/spot/training/envs/: __init__.py  spot_env.py
wasm/spot/training/export/: to_onnx.py
wasm/spot/training/serve/: tensorboard_service.py
wasm/spot/training/train/: __init__.py  config.yaml  train_rllib.py
wasm/ui-theme/: Cargo.toml  build.rs
wasm/ui-theme/src/: lib.rs
(+164 files in other folders)
