[package]
name = "info-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Dioxus web frontend for the info site — panel-kit workspace, compiled to WASM."

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
panel-kit = { workspace = true }
info-core = { workspace = true }
serde = { workspace = true }
web-sys = { version = "0.3", features = ["Window", "Storage"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

[[bin]]
name = "info-ui"
path = "src/main.rs"
