[package]
name = "pipedream"
version = "0.1.0"
authors = ["Olive Casazza <olive@casazza.info>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.104"
console_error_panic_hook = "0.1.6"
log = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
wasm-bindgen-futures = "=0.4.54"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
js-sys = "0.3.56"
typenum = "1.15.0"
nalgebra = "0.30.1"
ordered-float = "2.10.0"
oorandom = "11.1.3"
ui-theme = { path = "../ui-theme" }

# Bevy rendering
bevy-core = { path = "../bevy-core" }
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset", "bevy_render", "bevy_winit", "bevy_core_pipeline",
    "bevy_sprite", "webgl2", "png", "multi_threaded"
] }
bevy_egui = "0.32"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
