[package]
name = "spot"
version = "0.1.0"
authors = ["Jules <jules@example.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"
egui_plot = "0.29"
rapier3d = { version = "0.22", features = ["wasm-bindgen"] }
three-d = "0.18"
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.33"
log = "0.4"
console_error_panic_hook = "0.1.7"
roxmltree = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
three-d-asset = { version = "0.9", features = ["gltf", "stl"] }
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }
rand = "0.9.2"
tract-onnx = "0.22.0"
ui-theme = { path = "../ui-theme" }

# tract dependencies that need WASM features
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
