[package]
name = "spot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core physics and ML
rapier3d = { version = "0.22", features = ["wasm-bindgen"] }
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
console_error_panic_hook = "0.1.7"
roxmltree = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }
rand = "0.9.2"
tract-onnx = "0.22.0"
ui-theme = { path = "../ui-theme" }
lazy_static = "1.4"

# Bevy rendering
bevy-core = { path = "../bevy-core" }
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset", "bevy_render", "bevy_winit", "bevy_core_pipeline",
    "bevy_pbr", "bevy_gizmos", "bevy_gltf", "webgl2", "png", "multi_threaded"
] }
bevy_egui = "0.32"
egui_plot = "0.30"

# tract dependencies that need WASM features
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
