[package]
name = "spot-rapier-gym"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "spot_rapier"
crate-type = ["cdylib"]

[dependencies]
spot-physics = { path = "../spot-physics" }
rapier3d = "0.22"
nalgebra = "0.33"
pyo3 = { version = "0.22", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
